--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,123 @@
-html,
-body {
+/* focus - blue outline */
+*:focus,
+input:focus,
+.checkmark:focus,
+.check-mark:focus,
+.check-wrapper input:focus,
+label:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.tight-p {
+  margin: 0;
+  padding: 0;
+}
+
+span.strong {
+  font-weight: 700;
+}
+
+/* map */
+.map-container {
+  /* position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; */
+  width: 100%;
+  height: 80vh;
+}
+
+/*  */
+.gray {
+  color: #eee;
+  background-color: #666;
+}
+
+.gray-text {
+  color: #a4a4a4;
+}
+
+.black {
+  color: #fff;
+  background-color: #111;
+  padding: 0.75rem;
+  padding-left: 30px;
+}
+
+.sm-caps {
+  font-size: 0.7rem;
+  font-weight: 400;
+  color: #b9b9b9;
+  line-height: 1.05;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.p-bold {
+  font-size: 1.05rem;
+  line-height: 1.1;
+  color: #b9b9b9;
+  letter-spacing: 0rem;
+  padding: 0;
+  margin: 0;
 }
 
-* {
-  box-sizing: border-box;
+.lg-bold {
+  font-size: 2.4rem;
+  font-weight: 700;
+  line-height: 1.05;
+  letter-spacing: -0.02rem;
+  padding: 0;
+  margin: 0;
 }
 
-ul,
-li {
-  list-style: none;
+.mapboxgl-popup {
+  max-width: 270px;
+  z-index: 6;
+  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
+}
+
+.pop {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.35;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.lg {
+  font-size: 0.85rem;
+}
+
+hr {
+  margin: 0.3rem 0 0.3rem;
+  opacity: 0.2;
+}
+
+.mapboxgl-popup-content {
+  padding: 9px 23px 9px 13px;
+  border-radius: 4px;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #ababab;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 4px 0 0;
+  padding: 0;
+  position: relative;
+  top: 1px;
+}
+
+.red {
+  background-color: #c10000;
+  opacity: 0.8;
 }
